Actualización del Ejercicio 6: Cambio de Object.prototype a Object.setPrototypeOf

--- a/activity/1_session/index.html
+++ b/activity/1_session/index.html
@@ -173,9 +173,11 @@ const formatter = {
 
 formatter.append("World"); // Result: Hello World
 
-Object.prototype.toLowerString = function (str) {
-    console.log(str.toLowerCase());
-};
+Object.setPrototypeOf(formatter, {
+    toLowerString(str) {
+        console.log(str.toLowerCase());
+    }
+});
 
 formatter.toLowerString("I’m Lucas"); // Result: i’m lucas
     </code></pre>
